<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>name.ulbricht</groupId>
	<artifactId>led</artifactId>
	<version>2.3.0</version>

	<properties>
		<maven.compiler.source>12</maven.compiler.source>
		<maven.compiler.target>12</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>11.0.2</javafx.version>
		<junit.jupiter.version>5.3.2</junit.jupiter.version>
		<junit.platform.version>1.3.2</junit.platform.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-tooling-versions</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>[3.5.3,)</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>12</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<outputDirectory>${project.build.directory}/release</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.1</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/release</outputDirectory>
							<includeScope>runtime</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<!-- perform some additional tasks (Maven does not support this yet) -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>

					<!-- patch the module jar to feature a main class and a version number -->
					<!-- see https://issues.apache.org/jira/browse/MJAR-238 -->
					<execution>
						<id>patch-module-jar</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<exec executable="${java.home}/bin/jar" failonerror="true">

									<!-- add the main class -->
									<arg value="--main-class" />
									<arg value="name.ulbricht.led.LEDApp" />

									<!-- add the version number -->
									<arg value="--module-version" />
									<arg value="${project.version}" />

									<!-- update only -->
									<arg value="--update" />

									<!-- file to update -->
									<arg value="--file" />
									<arg
										value="${project.build.directory}/release/${project.artifactId}-${project.version}.jar" />
								</exec>
							</target>
						</configuration>
					</execution>

					<!-- create runimage with a minimal JRE and all required modules and 
						a launcher "bin/LED" in the "runimage" folder -->
					<!-- see https://maven.apache.org/plugins/maven-jlink-plugin -->
					<execution>
						<id>create-jre</id>
						<phase>package</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<target>
								<exec executable="${java.home}/bin/jlink"
									failonerror="true">
									<!-- path to modules -->
									<arg value="-p" />
									<arg value="${project.build.directory}/release" />

									<!-- name(s) of root module(s) -->
									<arg value="--add-modules" />
									<arg value="name.ulbricht.led" />

									<!-- target folder for the runimage -->
									<arg value="--output" />
									<arg value="${project.build.directory}/runimage" />

									<!-- strip debug information -->
									<arg value="--strip-debug" />

									<!-- name of the launcher and module to launch -->
									<arg value="--launcher" />
									<arg value="LED=name.ulbricht.led" />
								</exec>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>